[workspace]
resolver = "2"
edition = 2024

members = [
    "rust/serial_bridge", 
    "rust/rccn-usr/src/rccn_usr_comm", 
    "rust/rccn-usr/src/rccn_usr_example_app",
    "rust/boot_app",
    "rust/bix1_ops_app",
    "rust/aprs_app",
    "rust/rccn-usr/src/rccn_usr_launch", 
    "rust/rccn-usr/src/rccn_usr_cfdp", 
    "rust/rccn-usr/src/rccn_usr_update", 
    "rust/rccn-usr/src/rccn_usr_fec", 
    "rust/boot_app", 
    "rust/deploy_app", 
    "rust/diagnosis_app", 
    "rust/vcom_interface"
, "rust/aprs_app"]

[workspace.dependencies]
rccn_usr = { path = "rust/rccn-usr/src/rccn_usr" }
rccn_usr_bitstruct_derive = { path = "rust/rccn-usr/src/rccn_usr_bitstruct_derive" }
rccn_usr_pus_macros = { path = "rust/rccn-usr/src/rccn_usr_pus_macros" }
zenoh = { version = "1.0.3" }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
#strip = true
# https://github.com/meta-rust/meta-rust/issues/343
panic = "abort"