[package]
name = "diagnosis_app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
env_logger = { version = "0.11.7", default-features = false, features = ["color", "humantime"] }
i2cdev = "0.6.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
rccn_usr = { workspace = true }
rccn_usr_bitstruct_derive = { workspace = true }
rccn_usr_pus_macros = { workspace = true }
satrs = "0.2.1"
